force-app/main/default/objects/custom_create151__c/custom_create151__c.object-meta.xml
<CustomObject>
    <label>Custom created object151</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects151</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>