force-app/main/default/objects/custom_create151__c/fields/custom_create_151field508__c.field-meta.xml
<CustomField>
    <fullName>custom_create_151field508__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 151field508</label>
    <type>Checkbox</type>
</CustomField>